# studienarbeit-hangkell

./: .gitignore  .travis.yml  Api.html  Features.md  Game.html  Hangkell.cabal  Hangkell.haddock  Hangkell.txt  LICENSE  Player.html  README.md  Storage.html  Word.html  doc-index.html  index.html  mini_Api.html  mini_Game.html  mini_Player.html  mini_Storage.html  mini_Word.html  stack.yaml
app/: Main.hs
src/: Api.hs  Api.html  Game.hs  Game.html  Lib.hs  Player.hs  Player.html  Storage.hs  Storage.html  Word.hs  Word.html
test/: ApiSpec.hs  GameSpec.hs  LibSpec.hs  PlayerSpec.hs  Spec.hs  StorageSpec.hs  WordSpec.hs
