name:                Hangkell
version:             0.1.1
synopsis:            Like Hangman but online!
description:         An Hangman server to play on the network via a RESTful service.
homepage:            https://github.com/ob-fun-ws17/studienarbeit-hangkell
license:             BSD3
license-file:        LICENSE
author:              Florian Hageneder
maintainer:          fhagened@hm.edu
copyright:           2017 Florian Hageneder
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Word, Game, Player
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable Hangkell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hangkell
  default-language:    Haskell2010

test-suite Hangkell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GameSpec, LibSpec, PlayerSpec, WordSpec
  build-depends:       base
                     , Hangkell
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , QuickCheck
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ob-fun-ws17/studienarbeit-hangkell
